# RemoteController

.cargo/: config.toml
client/: Cargo.toml  README.md  build.rs  todos.md
client/src/: main.rs
server/: README.md  main.py  requirements.txt  start_server.bat  start_server.sh  todos.md
server/templates/: index.html  login.html
